--- a/app/sass/_mixins.sass
+++ b/app/sass/_mixins.sass
@@ -1,19 +1,13 @@
 @font-face 
-	font-family: 'proxima_novasemibold'
-	src: url('../fonts/ProximaNova-Semibold.woff') format('woff');
-	font-weight: normal
-	font-style: normal
-@font-face 
-	font-family: 'proxima_novalight'
-	src: url('../fonts/ProximaNova-Light.woff') format('woff');
-	font-weight: normal
-	font-style: normal
-	
+	font-family: 'Circe'
+	src: url('../fonts/Circe.otf') format("otf")
+
+
 $xl-width: 1200px;
 $lg-width: 992px;
 $md-width: 768px;
 $sm-width: 576px;
-$xs-width: 460px;
+$xs-width: 575px;
 
 =xl
 	@media (max-width: #{$xl-width - 1px})
