--- a/app/sass/_reset.sass
+++ b/app/sass/_reset.sass
@@ -17,11 +17,16 @@ html
 	+sm
 		font-size: .8rem
 	
-.container-fluid
-	padding-left: 40px !important
-	padding-right: 40px !important
+
+.wrapper
+	overflow: hidden
 body
 	font-size: 16px
-	font-family: proxima_novalight,sans-serif
+	font-family: 'Circe'
+	color: #434a54
+	a
+		color: #000000
+		&:hover
+			border: none
 .b-top
     padding-top: 100px
