--- a/app/sass/common.sass
+++ b/app/sass/common.sass
@@ -2,9 +2,7 @@
 @import 'mixins'
 // @import '../../node_modules/normalize.css/normalize'
 @import 'reset'
-@import 'b-menu'
-@import 'b-article'
-
+@import 'b-header'
 
 .container
 	width: 100%
